refactor：优化逻辑与复用代码

--- a/src/style/variable.scss
+++ b/src/style/variable.scss
@@ -3,3 +3,8 @@ $content-notice-fontcolor: #777;
 $content-bgColor: #F1F1F1;
 $search-bgColor: #F5F5F5;
 $search-fontColor: #B7B7B7;
+$default-fontColor: #FFFFFF;
+$bgColor: #FFFFFF;
+$default-btnColor: #0091FF;
+$input-bgColor: #F9F9F9;
+$highlight-fontColor: #E93B3B;
