refactor：拆分确认订单页面

--- a/src/style/variable.scss
+++ b/src/style/variable.scss
@@ -8,3 +8,5 @@ $bgColor: #FFFFFF;
 $default-btnColor: #0091FF;
 $input-bgColor: #F9F9F9;
 $highlight-fontColor: #E93B3B;
+$check-btnColor: #4FB0F9;
+$cart-info-fontColor: #666666;
